@@ -1,30 +1,45 @@
 package de.uni_hamburg.corpora;
 
+import de.uni_hamburg.corpora.validation.CmdiChecker;
+import de.uni_hamburg.corpora.publication.ZipCorpus;
 import de.uni_hamburg.corpora.conversion.EXB2HIATISOTEI;
 import de.uni_hamburg.corpora.conversion.EXB2INELISOTEI;
+import de.uni_hamburg.corpora.utilities.TypeConverter;
 import de.uni_hamburg.corpora.validation.ComaApostropheChecker;
 import de.uni_hamburg.corpora.validation.ComaNSLinksChecker;
 import de.uni_hamburg.corpora.validation.ComaOverviewGeneration;
-
-//import de.uni_hamburg.corpora.validation.ComaNameChecker;
-//import de.uni_hamburg.corpora.validation.ComaPIDLengthChecker;
+import de.uni_hamburg.corpora.validation.ComaNameChecker;
+import de.uni_hamburg.corpora.validation.GenerateAnnotationPanel;
+import de.uni_hamburg.corpora.validation.ComaPIDLengthChecker;
 import de.uni_hamburg.corpora.validation.ComaSegmentCountChecker;
 import de.uni_hamburg.corpora.validation.ExbFileReferenceChecker;
+import de.uni_hamburg.corpora.validation.ExbAnnotationPanelCheck;
 //import de.uni_hamburg.corpora.validation.ExbPatternChecker;
 //import de.uni_hamburg.corpora.validation.ExbSegmentationChecker;
 //import de.uni_hamburg.corpora.validation.ExbStructureChecker;
 import de.uni_hamburg.corpora.validation.FileCoverageChecker;
-//import de.uni_hamburg.corpora.validation.FilenameChecker;
+import de.uni_hamburg.corpora.validation.FilenameChecker;
+import de.uni_hamburg.corpora.validation.IAAFunctionality;
+import de.uni_hamburg.corpora.validation.ExbNormalize;
 import de.uni_hamburg.corpora.validation.NgexmaraldaCorpusChecker;
+import de.uni_hamburg.corpora.validation.NgTierCheckerWithAnnotation;
 import de.uni_hamburg.corpora.validation.PrettyPrintData;
 import de.uni_hamburg.corpora.validation.RemoveAbsolutePaths;
 import de.uni_hamburg.corpora.validation.RemoveAutoSaveExb;
-//import de.uni_hamburg.corpora.validation.TierChecker;
-//import de.uni_hamburg.corpora.validation.TierCheckerWithAnnotation;
+import de.uni_hamburg.corpora.validation.TierChecker;
+import de.uni_hamburg.corpora.validation.TierCheckerWithAnnotation;
 import de.uni_hamburg.corpora.validation.XSLTChecker;
+import de.uni_hamburg.corpora.validation.CorpusDataRegexReplacer;
+import de.uni_hamburg.corpora.validation.ExbEventLinebreaksChecker;
+import de.uni_hamburg.corpora.validation.ExbMakeTimelineConsistent;
+import de.uni_hamburg.corpora.visualization.CorpusHTML;
+import de.uni_hamburg.corpora.visualization.ListHTML;
+import de.uni_hamburg.corpora.visualization.ScoreHTML;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -38,11 +53,14 @@ import org.apache.commons.cli.HelpFormatter;
 import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
-import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
-import org.xml.sax.SAXException;
-import java.util.Arrays;
+import java.util.Iterator;
+import java.util.Properties;
+import java.util.Set;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.TransformerException;
+import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
+import org.jdom.Document;
+import org.xml.sax.SAXException;
 
 /**
  * This class has a Corpus and a Corpus Function as a field and is able to run a
@@ -53,24 +71,27 @@ import javax.xml.transform.TransformerException;
 public class CorpusMagician {
 
     //the whole corpus I want to run checks on
-    Corpus corpus;
+    static Corpus corpus;
+    //Basedirectory if it exists
+    static URL basedirectory;
     //one file I want to run a check on
     CorpusData corpusData;
     //all functions there are in the code
-    Collection<String> allExistingCFs;
+    static Collection<String> allExistingCFs = new ArrayList<String>();
     //all functions that should be run
     static Collection<String> chosencorpusfunctions = new ArrayList<String>();
-    static Collection<CorpusFunction> corpusfunctions = new
-        ArrayList<CorpusFunction>();
+    static Collection<CorpusFunction> corpusfunctions = new ArrayList<CorpusFunction>();
     //the final Report
     static Report report = new Report();
     //a list of all the available corpus data (no java objects, just URLs)
     static ArrayList<URL> alldata = new ArrayList<URL>();
     static CorpusIO cio = new CorpusIO();
     static boolean fixing = false;
+    static boolean iserrorsonly = false;
     static CommandLine cmd = null;
     //the final Exmaralda error list
     public static ExmaErrorList exmaError = new ExmaErrorList();
+    static Properties cfProperties;
 
     public CorpusMagician() {
     }
@@ -90,6 +111,7 @@ public class CorpusMagician {
             String urlstring = cmd.getOptionValue("input");
             URL url;
             fixing = cmd.hasOption("f");
+            iserrorsonly = cmd.hasOption("e");
             if (urlstring.startsWith("file://")) {
                 url = new URL(urlstring);
             } else {
@@ -114,11 +136,14 @@ public class CorpusMagician {
             }
             corpusfunctions = corpusFunctionStrings2Classes();
 
-
-
             //here is the heap space problem: everything is read all at one
             //and kept in the heap space the whole time
             corpuma.initCorpusWithURL(url);
+            //get the basedirectory if there is a coma file
+            if (!(corpus.getMetadata().isEmpty())) {
+                Metadata md = corpus.getMetadata().iterator().next();
+                basedirectory = md.getParentURL();
+            }
             //and here is another problem, all the corpusfiles are given as objects
             report = corpuma.runChosencorpusfunctions();
             //this is a possible solution, but not working yet
@@ -151,30 +176,49 @@ public class CorpusMagician {
 
                 }
             }
-            */
+             */
             System.out.println(report.getFullReports());
             String reportOutput;
             if (reportlocation.getFile().endsWith("html")) {
-                reportOutput = ReportItem.generateDataTableHTML(report.getRawStatistics());
-                cio.write(reportOutput, reportlocation);
+                if (iserrorsonly) {
+                    //ToDo
+                    //reportOutput = ReportItem.generateDataTableHTML(report.getErrorStatistics(basedirectory), report.getSummaryLines());
+                    reportOutput = ReportItem.generateDataTableHTML(report.getErrorStatistics(), report.getSummaryLines());                    
+                } else {
+                    reportOutput = ReportItem.generateDataTableHTML(report.getRawStatistics(), report.getSummaryLines());
+                }
             } else {
                 //reportOutput = report.getSummaryLines() + "\n" + report.getErrorReports();
                 reportOutput = report.getSummaryLines() + "\n" + report.getFullReports();
-                cio.write(reportOutput, reportlocation);
+            }
+            String absoluteReport = reportOutput;
+            if(absoluteReport!=null && basedirectory!=null && absoluteReport.contains(basedirectory.toString())){
+            absoluteReport = reportOutput.replaceAll(basedirectory.toString(), "");
+            }
+            if(absoluteReport!=null){
+            cio.write(absoluteReport, reportlocation);
             }
             //create the error list file
             //needs to be OS independent
-            String errorstring = new File(reportstring).getParent() + File.separator + "errorlist.xml";
-            URL errorlistlocation = Paths.get(errorstring).toUri().toURL();
-            ExmaErrorList.createFullErrorList(errorlistlocation);
+            //There is an error for me when running on windows: \null gets created
+            URL errorlistlocation = new URL(basedirectory + "/" + "CorpusServices_Errors.xml");            
+            Document exmaErrorList = TypeConverter.W3cDocument2JdomDocument(ExmaErrorList.createFullErrorList());
+            if (exmaErrorList != null){
+            cio.write(exmaErrorList, errorlistlocation);
+            System.out.println("Wrote ErrorList at " + errorlistlocation);
+            }           
         } catch (MalformedURLException ex) {
-            Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
+            report.addException(ex, "The given URL was incorrect");
         } catch (IOException ex) {
-            Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
+            report.addException(ex, "A file could not be read");
         } catch (ParserConfigurationException ex) {
-            Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
+            report.addException(ex, "A file could not be parsed");
         } catch (TransformerException ex) {
-            Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
+            report.addException(ex, "A transformation error occured");       
+        } catch (SAXException ex) {
+            report.addException(ex, "An XSLT error occured");
+        } catch (JexmaraldaException ex) {
+            report.addException(ex, "A Exmaralda file reading error occured");
         }
 
     }
@@ -203,7 +247,7 @@ public class CorpusMagician {
     }
 
     //creates a corpus object from an URL (filepath or "real" url)
-    public void initCorpusWithURL(URL url) {
+    public void initCorpusWithURL(URL url) throws MalformedURLException, SAXException, JexmaraldaException {
         corpus = new Corpus(url);
     }
 
@@ -218,66 +262,49 @@ public class CorpusMagician {
     //this shows that it doesn't work to just check for implementations of corpus functions
     //probably need to check for implementations of CorpusFunction?
     //TODO
-    public Collection<String> getAllExistingCFs() {
-
-        this.allExistingCFs = new ArrayList<String>();
+    public static Collection<String> getAllExistingCFs() {
         allExistingCFs.add("ComaApostropheChecker");
         allExistingCFs.add("ComaNSLinksChecker");
         allExistingCFs.add("ComaOverviewGeneration");
+        allExistingCFs.add("ZipCorpus");
         allExistingCFs.add("ComaSegmentCountChecker");
         allExistingCFs.add("ExbFileReferenceChecker");
+        allExistingCFs.add("ExbAnnotationPanelCheck");
+        allExistingCFs.add("EXB2INELISOTEI");
+        allExistingCFs.add("EXB2HIATISOTEI");
         allExistingCFs.add("FileCoverageChecker");
+        allExistingCFs.add("FileCoverageCheckerInel");
+        allExistingCFs.add("NormalizeEXB");
         allExistingCFs.add("PrettyPrintData");
         allExistingCFs.add("RemoveAbsolutePaths");
         allExistingCFs.add("RemoveAutoSaveExb");
         allExistingCFs.add("XSLTChecker");
-        //allExistingCFs.add("ExbPatternChecker");
-        //allExistingCFs.add("ExbSegmentationChecker");
-        //allExistingCFs.add("ExbStructureChecker");
-        //allExistingCFs.add("ComaAddTiersFromExbsCorrector");
-        //allExistingCFs.add("ComaErrorReportGenerator");
-        //allExistingCFs.add("SchematronChecker");
-        allExistingCFs.add("RemoveAutoSaveExb");
-        allExistingCFs.add("RemoveAbsolutePaths");
-        allExistingCFs.add("ComaOverviewGeneration");
-        allExistingCFs.add("EXB2INELISOTEI");
-        allExistingCFs.add("EXB2HIATISOTEI");
-	//allExistingCFs.add("TierChecker");
-        //allExistingCFs.add("ComaNameChecker");
-        //allExistingCFs.add("TierCheckerWithAnnotation");
-        //allExistingCFs.add("FilenameChecker");
-        //allExistingCFs.add("ComaPIDLengthChecker");
-        //allExistingCFs.add("CmdiChecker");
         allExistingCFs.add("NgexmaraldaCorpusChecker");
-//        Reflections reflections = new Reflections("de.uni_hamburg.corpora");
-//        Set<Class<? extends CorpusFunction>> classes = reflections.getSubTypesOf(CorpusFunction.class);
-//        for (Class c : classes) {
-//            System.out.println(c.toString());
-//            try {
-//                Constructor cons = c.getConstructor();
-//                try {
-//                    CorpusFunction cf = (CorpusFunction) cons.newInstance();
-//                    allExistingCFs.add(cf.getClass().getName());
-//                } catch (InstantiationException ex) {
-//                    Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
-//                } catch (IllegalAccessException ex) {
-//                    Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
-//                } catch (IllegalArgumentException ex) {
-//                    Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
-//                } catch (InvocationTargetException ex) {
-//                    Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
-//                }
-//            } catch (NoSuchMethodException ex) {
-//                Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
-//            } catch (SecurityException ex) {
-//                Logger.getLogger(CorpusMagician.class.getName()).log(Level.SEVERE, null, ex);
-//            }
-//        }
-        for (String cf : allExistingCFs) {
-            System.out.println(cf);
-        }
-
+        allExistingCFs.add("FilenameChecker");
+        allExistingCFs.add("CmdiChecker");
+        allExistingCFs.add("ComaNameChecker");
+        allExistingCFs.add("TierCheckerWithAnnotation");
+        allExistingCFs.add("TierChecker");
+        allExistingCFs.add("NgTierCheckerWithAnnotation");
+        allExistingCFs.add("XsltCheckerInel");
+        allExistingCFs.add("GenerateAnnotationPanel");
+        allExistingCFs.add("CorpusDataRegexReplacer");
+        allExistingCFs.add("ScoreHTML");
+        allExistingCFs.add("CorpusHTML");
+        allExistingCFs.add("IAAFunctionality");
+        allExistingCFs.add("ListHTML");
+        allExistingCFs.add("ExbEventLinebreaksChecker");
+        allExistingCFs.add("MakeTimelineConsistent");
         return allExistingCFs;
+    }
+
+    public static String getAllExistingCFsAsString() {
+        String all = "";
+        for (Iterator<String> it = getAllExistingCFs().iterator(); it.hasNext();) {
+            String s = it.next();
+            all = all + "\n" + s;
+        }
+        return all;
     }
 
     //TODO checks which functions can be run on specified data
@@ -310,7 +337,7 @@ public class CorpusMagician {
                     ComaApostropheChecker cac = new ComaApostropheChecker();
                     corpusfunctions.add(cac);
                     break;
-                 case "comanslinkschecker":
+                case "comanslinkschecker":
                     ComaNSLinksChecker cnslc = new ComaNSLinksChecker();
                     corpusfunctions.add(cnslc);
                     break;
@@ -326,6 +353,10 @@ public class CorpusMagician {
                     ExbFileReferenceChecker efrc = new ExbFileReferenceChecker();
                     corpusfunctions.add(efrc);
                     break;
+                case "exbannotationpanelcheck":
+                    ExbAnnotationPanelCheck eapc = new ExbAnnotationPanelCheck();
+                    corpusfunctions.add(eapc);
+                    break;    
                 case "filecoveragechecker":
                     FileCoverageChecker fcc = new FileCoverageChecker();
                     corpusfunctions.add(fcc);
@@ -349,6 +380,31 @@ public class CorpusMagician {
 				case "ngexmaraldacorpuschecker":
                     NgexmaraldaCorpusChecker ngex = new NgexmaraldaCorpusChecker();
                     corpusfunctions.add(ngex);
+		case "filenamechecker":
+                    FilenameChecker fnc = new FilenameChecker();
+                    corpusfunctions.add(fnc);
+                    break;
+		case "cmdichecker":
+                    CmdiChecker cmdi = new CmdiChecker();
+                    corpusfunctions.add(cmdi);
+                    break;
+                case "comapidlengthchecker":
+                    ComaPIDLengthChecker cplc = new ComaPIDLengthChecker();
+                    corpusfunctions.add(cplc);
+                    break;
+                case "comanamechecker":
+                    ComaNameChecker cnc = new ComaNameChecker();
+                    corpusfunctions.add(cnc);
+                    break;
+                case "tiercheckerwithannotation":
+                    TierCheckerWithAnnotation tcwa = new TierCheckerWithAnnotation();
+                    corpusfunctions.add(tcwa);
+                case "tierchecker":
+                    TierChecker tc = new TierChecker();
+                    corpusfunctions.add(tc);
+                case "ngtiercheckerwithannotation":
+                    NgTierCheckerWithAnnotation ngtcwa = new NgTierCheckerWithAnnotation();
+                    corpusfunctions.add(ngtcwa);
                     break;
                 case "xsltcheckerinel":
                     XSLTChecker xci = new XSLTChecker();
@@ -376,49 +432,113 @@ public class CorpusMagician {
                     break;
                 case "exb2hiatisotei":
                     EXB2HIATISOTEI ehit = new EXB2HIATISOTEI();
-                   corpusfunctions.add(ehit);
+                    corpusfunctions.add(ehit);
                     break;
-                /*
-                case "comaaddtiersfromexbscorrector":
-                    ComaAddTiersFromExbsCorrector catfec = new ComaAddTiersFromExbsCorrector();
-                    corpusfunctions.add(catfec);
+                case "normalizeexb":
+                    ExbNormalize ne = new ExbNormalize();
+                     if (cfProperties != null) {
+                        // Pass on the configuration parameter
+                        if (cfProperties.containsKey("whitespace")) {
+                            ne.setfixWhiteSpaces(cfProperties.getProperty("whitespace"));
+                            System.out.println("FixWhitespace set to " + cfProperties.getProperty("whitespace"));
+                        }
+                     }
+                    corpusfunctions.add(ne);
                     break;
-                case "tierchecker":
-                    TierChecker tc = new TierChecker();
-                    corpusfunctions.add(tc);
+                case "generateannotationpanel":
+                    GenerateAnnotationPanel gap = new GenerateAnnotationPanel();
+                    corpusfunctions.add(gap);
                     break;
-                case "comanamechecker":
-                    ComaNameChecker cnc = new ComaNameChecker();
-                    corpusfunctions.add(cnc);
+                case "iaafunctionality":
+                    IAAFunctionality iaa = new IAAFunctionality();
+                    corpusfunctions.add(iaa);
                     break;
-                case "comapidlengthchecker":
-                    ComaPIDLengthChecker cplc = new ComaPIDLengthChecker();
-                    corpusfunctions.add(cplc);
+                case "filecoveragecheckerinel":
+                    FileCoverageChecker fcci = new FileCoverageChecker();
+                    fcci.addFileEndingWhiteListString("flextext");
+                    fcci.addWhiteListString("report-output.html");
+                    fcci.addWhiteListString("Segmentation_Errors.xml");
+                    fcci.addWhiteListString("Structure_Errors.xml");
+                    corpusfunctions.add(fcci);
                     break;
-                case "tiercheckerwithannotation":
-                    TierCheckerWithAnnotation tcwa = new TierCheckerWithAnnotation();
-                    corpusfunctions.add(tcwa);
+                case "corpusdataregexreplacer":
+                    //ToDo                   
+                    CorpusDataRegexReplacer cdrr = new CorpusDataRegexReplacer();
+                    //try custom properties for the different corpusfunctions
+                    if (cfProperties != null) {
+                        // Pass on the configuration parameter
+                        if (cfProperties.containsKey("replace")) {
+                            cdrr.setReplace(cfProperties.getProperty("replace"));
+                            System.out.println("Replace set to " + cfProperties.getProperty("replace"));
+                        }
+                        if (cfProperties.containsKey("replacement")) {
+                            System.out.println(cfProperties.getProperty("replacement"));
+                            cdrr.setReplacement("Replacement set to " + cfProperties.getProperty("replacement"));
+                        }
+                        if (cfProperties.containsKey("xpathcontext")) {
+                            cdrr.setXpathContext(cfProperties.getProperty("xpathcontext"));
+                            System.out.println("Xpath set to " + cfProperties.getProperty("xpathcontext"));
+                        }
+                        if (cfProperties.containsKey("coma")) {
+                            cdrr.setComa(cfProperties.getProperty("coma"));
+                            System.out.println("Replace in Coma set to " + cfProperties.getProperty("xpathcontext"));
+                        }
+                    }
+                    corpusfunctions.add(cdrr);
                     break;
-                case "filenamechecker":
-                    FilenameChecker fnc = new FilenameChecker();
-                    corpusfunctions.add(fnc);
+                case "zipcorpus":
+                    ZipCorpus zc = new ZipCorpus();
+                    if (cfProperties != null) {
+                        // Pass on the configuration parameter
+                        if (cfProperties.containsKey("SOURCE_FOLDER")) {
+                            zc.setSourceFolder(cfProperties.getProperty("SOURCE_FOLDER"));
+                            System.out.println("Location of source folder set to " + cfProperties.getProperty("SOURCE_FOLDER"));
+                        }
+                        if (cfProperties.containsKey("OUTPUT_ZIP_FILE")) {                           
+                            zc.setOutputFile(cfProperties.getProperty("OUTPUT_ZIP_FILE"));
+                            System.out.println("Location of output file set to " + cfProperties.getProperty("OUTPUT_ZIP_FILE"));
+                        }
+                        if (cfProperties.containsKey("AUDIO")) {
+                            zc.setWithAudio(cfProperties.getProperty("AUDIO"));
+                            System.out.println("Should contain audio set to " + cfProperties.getProperty("AUDIO"));
+                        }
+                    }
+                    corpusfunctions.add(zc);
                     break;
-                case "exbpatternchecker":
-                    ExbPatternChecker epc = new ExbPatternChecker();
-                    report.merge(runCorpusFunction(corpus, epc));
+                case "scorehtml":
+                    ScoreHTML shtml = new ScoreHTML();
+                    corpusfunctions.add(shtml);
                     break;
-                case "exbsegmentationchecker":
-                    ExbSegmentationChecker esg = new ExbSegmentationChecker();
-                    corpusfunctions.add(esg);
+                case "corpushtml":
+                    CorpusHTML chtml = new CorpusHTML();
+                    corpusfunctions.add(chtml);
                     break;
-                case "exbstructurechecker":
-                    ExbStructureChecker esc = new ExbStructureChecker();
-                    corpusfunctions.add(esc);
+                case "listhtml":
+                    ListHTML lhtml = new ListHTML();
+                    if (cfProperties != null) {
+                        // Pass on the configuration parameter
+                        if (cfProperties.containsKey("SEGMENTATION")) {
+                            lhtml.setSegmentation(cfProperties.getProperty("SEGMENTATION"));
+                            System.out.println("Segmentation set to " + cfProperties.getProperty("SEGMENTATION"));
+                        }
+                    }
+                    corpusfunctions.add(lhtml);
                     break;
-                case "cmdichecker":
-                    CmdiChecker cmdi = new CmdiChecker();
-                    corpusfunctions.add(cmdi);
-                    break; */
+                case "exbeventlinebreakschecker":
+                    ExbEventLinebreaksChecker elb = new ExbEventLinebreaksChecker();
+                    corpusfunctions.add(elb);
+                    break;
+                case "maketimelineconsistent":
+                    ExbMakeTimelineConsistent emtc = new ExbMakeTimelineConsistent();
+                    if (cfProperties != null) {
+                        // Pass on the configuration parameter
+                        if (cfProperties.containsKey("interpolate")) {
+                             emtc.setInterpolateTimeline(cfProperties.getProperty("interpolate"));
+                            System.out.println("FixWhitespace set to " + cfProperties.getProperty("interpolate"));
+                        }
+                     }
+                    corpusfunctions.add(emtc);
+                    break;
                 default:
                     report.addCritical("CommandlineFunctionality", "Function String \"" + function + "\" is not recognized");
             }
@@ -573,23 +693,37 @@ public class CorpusMagician {
 
         Option input = new Option("i", "input", true, "input file path");
         input.setRequired(true);
+        input.setArgName("FILE PATH");
         options.addOption(input);
 
         Option output = new Option("o", "output", true, "output file");
         output.setRequired(true);
+        output.setArgName("FILE PATH");
         options.addOption(output);
 
         Option corpusfunction = new Option("c", "corpusfunction", true, "corpus function");
         // Set option c to take 1 to oo arguments
         corpusfunction.setArgs(Option.UNLIMITED_VALUES);
+        corpusfunction.setArgName("CORPUS FUNCTION");
         corpusfunction.setRequired(true);
+        corpusfunction.setValueSeparator(',');
         options.addOption(corpusfunction);
 
         /*
         Option speed = new Option("s", "speed", false, "faster but more heap space");
         speed.setRequired(false);
         options.addOption(speed);
-        */
+         */
+        Option propertyOption = Option.builder("p")
+                .longOpt("property")
+                .argName("property=value")
+                .hasArgs()
+                .valueSeparator()
+                .numberOfArgs(2)
+                .desc("use value for given properties")
+                .build();
+
+        options.addOption(propertyOption);
 
         Option fix = new Option("f", "fix", false, "fixes problems automatically");
         fix.setRequired(false);
@@ -599,20 +733,32 @@ public class CorpusMagician {
         fix.setRequired(false);
         options.addOption(help);
 
+        Option errorsonly = new Option("e", "errorsonly", false, "output only errors");
+        fix.setRequired(false);
+        options.addOption(errorsonly);
+
         CommandLineParser parser = new DefaultParser();
         HelpFormatter formatter = new HelpFormatter();
+        formatter.setOptionComparator(null);
+
+        String header = "Specify a corpus folder or file and a function to be applied\n\n";
+        String footer = "\nthe available functions are:\n" + getAllExistingCFsAsString() + "\n\nPlease report issues at https://lab.multilingua.uni-hamburg.de/redmine/projects/corpus-services/issues";
 
         try {
             cmd = parser.parse(options, args);
         } catch (ParseException e) {
             System.out.println(e.getMessage());
-            formatter.printHelp("hzsk-corpus-services", options);
+            formatter.printHelp("hzsk-corpus-services", header, options, footer, true);
             System.exit(1);
         }
 
         if (cmd.hasOption("h")) {
             // automatically generate the help statement
-            formatter.printHelp("hzsk-corpus-services", options);
+            formatter.printHelp("hzsk-corpus-services", header, options, footer, true);
+            System.exit(1);
+        }
+        if (cmd.hasOption("p")) {
+            cfProperties = cmd.getOptionProperties("p");
         }
         /*
         String inputFilePath = cmd.getOptionValue("input");
